--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head prefix=”og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#”>
     <title>cyberkeyboard</title>
     <meta charset="UTF-8">
+    <meta property=”og:title” content=”cyberkeyboard”>
+    <meta property=”og:description” content=”文字を撃ち出すキーボードcyberkeyboard”>
+    <meta property=”og:url” content=”http://yumu19.github.io/cyberkeyboard/”>
+    <meta property=”og:image” content=”img/ogp.png”>
 
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="js/p5.dom.js" type="text/javascript"></script>
